<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="hello">Welcome to our SDK !</string>
    <string name="app_name">ZHIANG ISO SDK 2018</string>
    <string name="TXT_INIT_DEVICE">Open</string>
    <string name="TXT_UNINIT_DEVICE">Close</string>
    <string name="TXT_CAPTURE_IMAGE">Getimg</string>
    <string name="TXT_CALIBRATION">Calibration</string>
    <string name="TXT_GET_IMAGE_QUALITY">ImgQuality</string>
    <string name="TXT_GET_NFI_QUALITY">CharQuality</string>
    <string name="TXT_CREATE_ANSI_TEMP">Create ANSI</string>
    <string name="TXT_CREATE_ISO_TEMP">Create ISO</string>
    <string name="TXT_COMPARE_TEMPS">Match</string>
    <string name="TXT_ANSI_CHAR">ANSI Char</string>
    <string name="TXT_ISO_CHAR">ISO Char</string>
    <string name="TXT_COMPRESS">Compress WSQ</string>
    <string name="TXT_UNCOMPRESS">UnCompress WSQ</string>
    <string name="TXT_IMAGE">Image View</string>
    <string name="TXT_STOP">Stop</string>
</resources>

<!-- 
<resources>
    <string name="hello">Welcome to our SDK !</string>
    <string name="app_name">ZHIANG Fingerprint SDK v1.01 for ANSI/ISO Standard</string>
    <string name="TXT_INIT_DEVICE">InitDevice</string>
    <string name="TXT_UNINIT_DEVICE">UnInitDevice</string>
    <string name="TXT_CAPTURE_IMAGE">CaptureImage</string>
    <string name="TXT_CALIBRATION">Calibration</string>
    <string name="TXT_GET_IMAGE_QUALITY">ImageQuality</string>
    <string name="TXT_GET_NFI_QUALITY">NFIQuality</string>
    <string name="TXT_CREATE_ANSI_TEMP">CreateANSI\nTemplate</string>
    <string name="TXT_CREATE_ISO_TEMP">CreateISO\nTemplate</string>
    <string name="TXT_COMPARE_TEMPS">CompareTemplates</string>
    <string name="TXT_ANSI_CHAR">ANSI\nTemplate</string>
    <string name="TXT_ISO_CHAR">ISO\nTemplate</string>
    <string name="TXT_COMPRESS">Compress\nToWSQ</string>
    <string name="TXT_UNCOMPRESS">UnCompress\nFromWSQ</string>
    <string name="TXT_IMAGE">Image View</string>
    <string name="TXT_STOP">Stop</string>
</resources>
 -->
